// ============================================================================
// /sales/pricing-engine-service (版本 2.0)
// 描述: 提供动态定价计算功能，模拟销售订单或开票的定价过程。
//       字段设计参考核心ERP的定价条件表结构 (KONV, KONP)。
// ============================================================================

syntax = "proto3";

package sd.pe.v1;


import "google/protobuf/timestamp.proto";
import "common/common.proto";
import "google/api/annotations.proto";

// ============================================================================
// 服务定义: PricingEngineService
// ============================================================================

service PricingEngineService {
  // 模拟并计算一组项目的定价
  rpc CalculatePrice(CalculatePriceRequest) returns (CalculatePriceResponse) {

    option (google.api.http) = {

      post: "/api/v1/sales/price/calculate"

      body: "*"

    };

  }
  
  // 更新定价条件记录 (New)
  rpc UpdatePricingCondition(UpdatePricingConditionRequest) returns (UpdatePricingConditionResponse) {

  
    option (google.api.http) = {

  
      put: "/api/v1/sales/pricing-condition"

  
      body: "*"

  
    };

  
  }
}

// ============================================================================
// 数据结构: Pricing (定价)
// ============================================================================

// 定价上下文
message PricingContext {
  string sales_org = 1;
  string distribution_channel = 2;
  string division = 3;
  string customer = 4;
  google.protobuf.Timestamp pricing_date = 5;
  string currency = 6;
}

// 待定价的项目
message PricingItem {
  string item_id = 1;
  string material = 2;
  string quantity = 3;
  string unit = 4;
}

// 定价结果
message PricingResult {
  string item_id = 1;
  common.v1.MonetaryValue net_price = 2;
  common.v1.MonetaryValue tax_amount = 3;
  common.v1.MonetaryValue gross_price = 4;
  repeated PricingCondition conditions = 5;
}

// 定价条件
message PricingCondition {
  common.v1.PricingConditionType condition_type = 1;
  string condition_value = 2;
  string currency_or_unit = 3;
  string description = 4;
}

// ============================================================================
// RPC 消息定义
// ============================================================================

// 计算价格请求
message CalculatePriceRequest {
  PricingContext context = 1;
  repeated PricingItem items = 2;
  common.v1.RequestContext request_context = 99;
}

// 计算价格响应
message CalculatePriceResponse {
  repeated PricingResult results = 1;
  repeated common.v1.ApiMessage messages = 2;
}

message UpdatePricingConditionRequest {
  common.v1.PricingConditionType condition_type = 1;
  string material = 2;
  string customer = 3; // Optional
  string sales_org = 4;
  string amount = 5;
  string currency = 6;
  common.v1.DateRange validity_period = 7;
  common.v1.RequestContext context = 99;
}

message UpdatePricingConditionResponse {
  bool success = 1;
  string condition_record_id = 2;
  repeated common.v1.ApiMessage messages = 3;
}
